--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -156,7 +156,7 @@ IDR_CLOSETAB_INACT              BITMAP    "icons\\closeTabButton_inact.bmp"
 IDR_CLOSETAB_HOVER              BITMAP    "icons\\closeTabButton_hover.bmp"
 IDR_CLOSETAB_PUSH               BITMAP    "icons\\closeTabButton_push.bmp"
 IDR_DOCMAP                      BITMAP    "icons\\docMap.bmp"
-
+IDR_FUNC_LIST                   BITMAP    "icons\\functionList.bmp"
 IDI_STARTRECORD_OFF_ICON        ICON      "icons\\startrecord_off.ico"
 IDI_STARTRECORD_ON_ICON         ICON      "icons\\startrecord_on.ico"
 IDI_STARTRECORD_DISABLE_ICON    ICON      "icons\\startrecord_dis.ico"
@@ -454,7 +454,6 @@ BEGIN
             END
 
         MENUITEM "Document Map",          IDM_VIEW_DOC_MAP
-
         MENUITEM "Function List",         IDM_VIEW_FUNC_LIST
         MENUITEM SEPARATOR
         MENUITEM "Synchronize Vertical Scrolling",      IDM_VIEW_SYNSCROLLV
