[UPDATE] Update GUI translation.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1071 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -198,7 +198,7 @@ BEGIN
     LTEXT           "0",IDC_MAXNBFILEVAL_STATIC,229,52,15,8,WS_TABSTOP
     CONTROL         "Don't check at launch time",IDC_CHECK_DONTCHECKHISTORY,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,39,140,10
-    GROUPBOX        "Display",IDC_STATIC,121,65,225,73,BS_CENTER
+    GROUPBOX        "Display",IDC_DISPLAY_STATIC,121,65,225,73,BS_CENTER
     CONTROL         "In Submenu",IDC_CHECK_INSUBMENU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,76,79,10
     CONTROL         "Only File Name",IDC_RADIO_ONLYFILENAME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,133,92,88,10
     CONTROL         "Full File Name Path",IDC_RADIO_FULLFILENAMEPATH,"Button",BS_AUTORADIOBUTTON,133,106,109,10
@@ -280,7 +280,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_VARLIST,259,24,70,58,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add",IDC_BUTTON_ADDVAR,337,24,44,12
     RTEXT           "Variable :",IDC_VAR_STATIC,198,26,59,8
-    RTEXT           "Which part :",IDC_WHICHPART_STATIC,155,161,80,8
+    RTEXT           "Here display your variable settings",IDC_WHICHPART_STATIC,155,161,160,8
     LTEXT           "",IDC_VIEWPANEL_STATIC,242,161,190,8
     GROUPBOX        "Header and Footer",IDC_HEADERFPPTER_GR_STATIC,150,7,296,172,BS_CENTER
 END
