--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -796,7 +796,7 @@ BEGIN
         MENUITEM "Get More Plugins",          IDM_PLUGINSHOME
         MENUITEM SEPARATOR
         MENUITEM "Update Notepad++",          IDM_UPDATE_NPP
-		MENUITEM "Set Updater Proxy",         IDM_CONFUPDATERPROXY
+		MENUITEM "Set Updater Proxy...",         IDM_CONFUPDATERPROXY
 		MENUITEM SEPARATOR
         MENUITEM "About Notepad++",           IDM_ABOUT
     END
