--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -321,11 +321,13 @@ IDD_PREFERENCE_MULTIINSTANCE_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Multi-instance settings",IDC_MULTIINST_GB_STATIC,89,44,268,89,BS_CENTER
+    GROUPBOX        "Multi-instance settings",IDC_MULTIINST_GB_STATIC,89,44,268,98,BS_CENTER
     CONTROL         "Open session in a new instance of Notepad++",IDC_SESSIONININST_RADIO,
-                    "Button",BS_AUTORADIOBUTTON,123,68,226,10
-    CONTROL         "Always in multi-instance mode",IDC_MULTIINST_RADIO,"Button",BS_AUTORADIOBUTTON,123,87,218,10
-    CONTROL         "Default (mono-instance)",IDC_MONOINST_RADIO,"Button",BS_AUTORADIOBUTTON,123,106,196,10
+                    "Button",BS_AUTORADIOBUTTON,122,61,226,10
+    CONTROL         "Always in multi-instance mode",IDC_MULTIINST_RADIO,
+                    "Button",BS_AUTORADIOBUTTON,122,80,218,10
+    CONTROL         "Default (mono-instance)",IDC_MONOINST_RADIO,"Button",BS_AUTORADIOBUTTON,122,99,196,10
+    LTEXT           "* The modification of this setting needs to restart Notepad++",IDD_STATIC_RESTARTNOTE,110,124,239,8
 END
 
 IDD_PREFERENCE_DELIMITERSETTINGS_BOX DIALOGEX 0, 0, 455, 185
