[NEW_FEATURE] (Author: Andreas Jonsson) Add new feature: select all between matching braces.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1093 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -328,6 +328,7 @@ BEGIN
         MENUITEM "Previous Search Result",      IDM_SEARCH_GOTOPREVFOUND
         MENUITEM "&Go to...",                   IDM_SEARCH_GOTOLINE
         MENUITEM "Go to Matching Brace",        IDM_SEARCH_GOTOMATCHINGBRACE
+		MENUITEM "Select All Between Matching Braces" IDM_SEARCH_SELECTMATCHINGBRACES
         MENUITEM SEPARATOR
 
         POPUP "Mark All"
