[NEW_FEATURE] (Author: Andreas Jonsson) Add new feature: Ctrl+Alt+Enter insert blank line above the current line, Ctrl+Alt+Shift+Enter insert blank line below the current line.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1094 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -258,6 +258,8 @@ BEGIN
             MENUITEM "Move Down Current Line",    IDM_EDIT_LINE_DOWN
 			MENUITEM "Remove Empty Lines",        IDM_EDIT_REMOVEEMPTYLINES
 			MENUITEM "Remove Empty Lines (Containing Blank characters)",    IDM_EDIT_REMOVEEMPTYLINESWITHBLANK
+			MENUITEM "Insert Blank Line Above Current",    IDM_EDIT_BLANKLINEABOVECURRENT
+			MENUITEM "Insert Blank Line Below Current",    IDM_EDIT_BLANKLINEBELOWCURRENT
         END
         POPUP "Comment/Uncomment"
         BEGIN
