[NEW_FEATURE] (Author: Andreas Jonsson) Add "close all tab to left" and "close all tab to right" features.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1097 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -209,7 +209,12 @@ BEGIN
         MENUITEM "Rename...",                        IDM_FILE_RENAME
         MENUITEM "&Close",                           IDM_FILE_CLOSE
         MENUITEM "Clos&e All",                       IDM_FILE_CLOSEALL
-        MENUITEM "Close All but Active Document",    IDM_FILE_CLOSEALL_BUT_CURRENT
+		POPUP "Close More"
+		BEGIN
+			MENUITEM "Close All but Active Document",    IDM_FILE_CLOSEALL_BUT_CURRENT
+			MENUITEM "Close All to the Left",			 IDM_FILE_CLOSEALL_TOLEFT
+			MENUITEM "Close All to the Right",			 IDM_FILE_CLOSEALL_TORIGHT
+		END
         MENUITEM "Move to Recycle Bin",              IDM_FILE_DELETE
         MENUITEM SEPARATOR
         MENUITEM "Load Session...",                  IDM_FILE_LOADSESSION
