--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -304,17 +304,36 @@ IDD_PREFERENCE_AUTOCOMPLETION_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Auto-Completion",IDD_AUTOC_GRPSTATIC,86,40,289,92,BS_CENTER
+    GROUPBOX        "Auto-Completion",IDD_AUTOC_GRPSTATIC,86,4,289,84,BS_CENTER
     CONTROL         "Enable auto-completion on each input",IDD_AUTOC_ENABLECHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,51,150,10
-    CONTROL         "Function completion",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,118,65,145,10
-    CONTROL         "Word completion",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,118,81,145,10
-    RTEXT           "From",IDD_AUTOC_STATIC_FROM,248,51,47,8
-    CTEXT           "1",IDD_AUTOC_STATIC_N,299,51,8,8,WS_TABSTOP
-    LTEXT           "th character",IDD_AUTOC_STATIC_CHAR,313,51,57,8
-    LTEXT           "Valid value : 1 - 9",IDD_AUTOC_STATIC_NOTE,278,61,93,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,15,150,10
+    CONTROL         "Function completion",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,118,29,145,10
+    CONTROL         "Word completion",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,118,45,145,10
+    RTEXT           "From",IDD_AUTOC_STATIC_FROM,248,15,47,8
+    CTEXT           "1",IDD_AUTOC_STATIC_N,299,15,8,8,WS_TABSTOP
+    LTEXT           "th character",IDD_AUTOC_STATIC_CHAR,313,15,57,8
+    LTEXT           "Valid value : 1 - 9",IDD_AUTOC_STATIC_NOTE,278,25,93,8
     CONTROL         "Function parameters hint on input",IDD_FUNC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,103,160,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,67,160,10
+	
+    GROUPBOX        "Auto-Insert",IDD_AUTOCINSERT_GRPSTATIC,86,94,289,84,BS_CENTER
+    CONTROL         " (",IDD_AUTOCPARENTHESES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,115,24,10
+    CONTROL         " [",IDD_AUTOCBRACKET_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,133,24,10
+    CONTROL         " {",IDD_AUTOCCURLYBRACKET_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,152,24,10
+    CONTROL         " """,IDD_AUTOC_DOUBLEQUOTESCHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,116,24,10
+    CONTROL         " '",IDD_AUTOC_QUOTESCHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,145,133,24,10
+    CONTROL         " html/xml close tag",IDD_AUTOCTAG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,146,152,76,10
+    RTEXT           "Open",IDC_MACHEDPAIROPEN_STATIC,307,103,25,8
+    LTEXT           "Close",IDC_MACHEDPAIRCLOSE_STATIC,345,103,25,8
+    RTEXT           "Matched pair 1:",IDC_MACHEDPAIR_STATIC1,248,117,70,8
+    EDITTEXT        IDC_MACHEDPAIROPEN_EDIT1,320,115,10,14
+    EDITTEXT        IDC_MACHEDPAIRCLOSE_EDIT1,348,115,10,14
+    RTEXT           "Matched pair 2:",IDC_MACHEDPAIR_STATIC2,248,137,70,8
+    EDITTEXT        IDC_MACHEDPAIROPEN_EDIT2,320,135,10,14
+    EDITTEXT        IDC_MACHEDPAIRCLOSE_EDIT2,348,135,10,14
+    RTEXT           "Matched pair 3:",IDC_MACHEDPAIR_STATIC3,248,157,70,8
+    EDITTEXT        IDC_MACHEDPAIROPEN_EDIT3,320,155,10,14
+    EDITTEXT        IDC_MACHEDPAIRCLOSE_EDIT3,348,155,10,14
 END
 
 IDD_PREFERENCE_MULTIINSTANCE_BOX DIALOGEX 0, 0, 455, 185
