[UPDATE] Add CoffeeScript keywords.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1118 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -629,7 +629,7 @@ BEGIN
         MENUITEM "Caml",                    IDM_LANG_CAML
         MENUITEM "Cmake",                   IDM_LANG_CMAKE
         MENUITEM "COBOL",                   IDM_LANG_COBOL
-        MENUITEM "Coffee script",           IDM_LANG_COFFEESCRIPT
+        MENUITEM "CoffeeScript",           IDM_LANG_COFFEESCRIPT
         MENUITEM "CSS",                     IDM_LANG_CSS
         MENUITEM "D",                       IDM_LANG_D
         MENUITEM "Diff",                    IDM_LANG_DIFF
@@ -696,7 +696,7 @@ BEGIN
         MENUITEM "Caml",                  IDM_LANG_CAML
         MENUITEM "Cmake",                 IDM_LANG_CMAKE
         MENUITEM "COBOL",                 IDM_LANG_COBOL
-		MENUITEM "Coffee script",         IDM_LANG_COFFEESCRIPT
+		MENUITEM "CoffeeScript",         IDM_LANG_COFFEESCRIPT
         MENUITEM "CSS",                   IDM_LANG_CSS
     END
     POPUP "D"
