--- a/PowerEditor/src/WinControls/FunctionList/functionListPanel.rc
+++ b/PowerEditor/src/WinControls/FunctionList/functionListPanel.rc
@@ -35,5 +35,6 @@ EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Function List"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    //PUSHBUTTON      "Reload",IDC_RELOADBUTTON_FUNCLIST, 3,3,38,14
 	//LISTBOX         IDC_LIST_FUNCLIST,50,44,78,120,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
