[NEW_FEATURE] (Author: Andreas Jonsson) Add auto-completion for absolute path feature.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1129 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -279,6 +279,7 @@ BEGIN
             MENUITEM "Function Completion",         IDM_EDIT_AUTOCOMPLETE
             MENUITEM "Word Completion",             IDM_EDIT_AUTOCOMPLETE_CURRENTFILE
             MENUITEM "Function Parameters Hint",    IDM_EDIT_FUNCCALLTIP
+			MENUITEM "Path Completion",				IDM_EDIT_AUTOCOMPLETE_PATH
         END
         POPUP "EOL Conversion"
         BEGIN
