--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -195,6 +195,9 @@ IDI_FUNCLIST_ROOT               BITMAP      "icons\\project_file.bmp"
 IDI_FUNCLIST_NODE               BITMAP      "icons\\funcList_node.bmp"
 IDI_FUNCLIST_LEAF               BITMAP      "icons\\funcList_leaf.bmp"
 
+IDI_FUNCLIST_SORTBUTTON         BITMAP      "icons\\funcList_node.bmp"
+IDI_FUNCLIST_RELOADBUTTON       BITMAP      "icons\\funcList_leaf.bmp"
+
 IDR_M30_MENU MENU
 BEGIN
     POPUP "&File"
