--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -195,8 +195,8 @@ IDI_FUNCLIST_ROOT               BITMAP      "icons\\project_file.bmp"
 IDI_FUNCLIST_NODE               BITMAP      "icons\\funcList_node.bmp"
 IDI_FUNCLIST_LEAF               BITMAP      "icons\\funcList_leaf.bmp"
 
-IDI_FUNCLIST_SORTBUTTON         BITMAP      "icons\\funcList_node.bmp"
-IDI_FUNCLIST_RELOADBUTTON       BITMAP      "icons\\funcList_leaf.bmp"
+IDI_FUNCLIST_SORTBUTTON         BITMAP      "icons\\funclstSort.bmp"
+IDI_FUNCLIST_RELOADBUTTON       BITMAP      "icons\\funclstReload.bmp"
 
 IDR_M30_MENU MENU
 BEGIN
@@ -903,4 +903,4 @@ BEGIN
 END
 
 // xp style
-1 RT_MANIFEST "notepad++.exe.manifest"
+//1 RT_MANIFEST "notepad++.exe.manifest"
