[NEW] Add panel icons for 6 panels: ascii insertion, clipboard history, doc map, doc switcher, function list and project.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1154 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -157,6 +157,12 @@ IDR_CLOSETAB_HOVER              BITMAP    "icons\\closeTabButton_hover.bmp"
 IDR_CLOSETAB_PUSH               BITMAP    "icons\\closeTabButton_push.bmp"
 IDR_DOCMAP                      BITMAP    "icons\\docMap.bmp"
 IDR_FUNC_LIST                   BITMAP    "icons\\functionList.bmp"
+IDR_DOCMAP_ICO                  ICON      "icons\\docMap.ico"
+IDR_FUNC_LIST_ICO               ICON      "icons\\functionList.ico"
+IDR_PROJECTPANEL_ICO            ICON      "icons\\projectPanel.ico"
+IDR_CLIPBOARDPANEL_ICO          ICON      "icons\\clipboardPanel.ico"
+IDR_ASCIIPANEL_ICO              ICON      "icons\\asciiPanel.ico"
+IDR_DOCSWITCHER_ICO             ICON      "icons\\docSwitcher.ico"
 IDI_STARTRECORD_OFF_ICON        ICON      "icons\\startrecord_off.ico"
 IDI_STARTRECORD_ON_ICON         ICON      "icons\\startrecord_on.ico"
 IDI_STARTRECORD_DISABLE_ICON    ICON      "icons\\startrecord_dis.ico"
