[NEW_FEATURE] Add 2 new commands: Open containing folder and Open cmd.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1156 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -51,7 +51,7 @@ BEGIN
             VALUE    "FileDescription",    "Notepad++ : a free (GNU) source code editor\0"
             VALUE    "FileVersion",        VERSION_VALUE
             VALUE    "InternalName",       "npp.exe\0"
-            VALUE    "LegalCopyright",     "Copyleft 1998-2006 by Don HO\0"
+            VALUE    "LegalCopyright",     "Copyleft 1998-2013 by Don HO\0"
             VALUE    "OriginalFilename",   "Notepad++.exe\0"
             VALUE    "ProductName",        "Notepad++\0"
             VALUE    "ProductVersion",     VERSION_VALUE
@@ -210,6 +210,11 @@ BEGIN
     BEGIN
         MENUITEM "&New",                             IDM_FILE_NEW
         MENUITEM "&Open...",                         IDM_FILE_OPEN
+		POPUP "Open Folder"
+		BEGIN
+            MENUITEM "Open Containing Folder",       IDM_FILE_OPEN_FOLDER
+            MENUITEM "Open cmd",                     IDM_FILE_OPEN_CMD
+		END
         MENUITEM "Re&load from Disk",                IDM_FILE_RELOAD
         MENUITEM "&Save",                            IDM_FILE_SAVE
         MENUITEM "Save &As...",                      IDM_FILE_SAVEAS
