[BUG_FIXED] Fix the display/translation problem for new added commands. [UPDATE] Update html auto-completion file.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1157 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -210,10 +210,10 @@ BEGIN
     BEGIN
         MENUITEM "&New",                             IDM_FILE_NEW
         MENUITEM "&Open...",                         IDM_FILE_OPEN
-		POPUP "Open Folder"
+		POPUP "Open Containing Folder"
 		BEGIN
-            MENUITEM "Open Containing Folder",       IDM_FILE_OPEN_FOLDER
-            MENUITEM "Open cmd",                     IDM_FILE_OPEN_CMD
+            MENUITEM "Explorer",       IDM_FILE_OPEN_FOLDER
+            MENUITEM "cmd",            IDM_FILE_OPEN_CMD
 		END
         MENUITEM "Re&load from Disk",                IDM_FILE_RELOAD
         MENUITEM "&Save",                            IDM_FILE_SAVE
