--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -112,6 +112,8 @@ BEGIN
     GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,142,132,148,30,BS_CENTER
     CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,145,67,13
     LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,225,145,12,8
+	CONTROL         "Disable advanced scrolling feature\r(if you have touchpad problem)",IDC_CHECK_DISABLEADVANCEDSCROLL,
+	"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,298,153,139,18
 END
 
 IDD_PREFERENCE_SETTING_BOX DIALOGEX 0, 0, 455, 185
