[NEW] DPI aware (in progress).
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1171 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/visual.net/notepadPlus.vcproj
+++ b/PowerEditor/visual.net/notepadPlus.vcproj
@@ -182,6 +182,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="..\src\dpiAware.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
