[NEW_FEATURE] Make Notepad++ DPI-aware.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1172 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/visual.net/notepadPlus.vcproj
+++ b/PowerEditor/visual.net/notepadPlus.vcproj
@@ -85,6 +85,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="..\src\dpiAware.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
