[NEW_FEATURE] Add function + word completion option in auto-completion feature.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1177 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -310,15 +310,15 @@ BEGIN
     GROUPBOX        "Auto-Completion",IDD_AUTOC_GRPSTATIC,86,4,289,84,BS_CENTER
     CONTROL         "Enable auto-completion on each input",IDD_AUTOC_ENABLECHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,15,150,10
-    CONTROL         "Function completion",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,118,29,145,10
-    CONTROL         "Word completion",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,118,45,145,10
+    CONTROL         "Function completion",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,118,27,145,10
+    CONTROL         "Word completion",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,118,41,145,10
+    CONTROL         "Function and Word completion",IDD_AUTOC_BOTHRADIO,"Button",BS_AUTORADIOBUTTON,118,55,145,10
     RTEXT           "From",IDD_AUTOC_STATIC_FROM,248,15,47,8
     CTEXT           "1",IDD_AUTOC_STATIC_N,299,15,8,8,WS_TABSTOP
     LTEXT           "th character",IDD_AUTOC_STATIC_CHAR,313,15,57,8
     LTEXT           "Valid value : 1 - 9",IDD_AUTOC_STATIC_NOTE,278,25,93,8
     CONTROL         "Function parameters hint on input",IDD_FUNC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,67,160,10
-	
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,72,160,10
     GROUPBOX        "Auto-Insert",IDD_AUTOCINSERT_GRPSTATIC,86,94,289,84,BS_CENTER
     CONTROL         " (",IDD_AUTOCPARENTHESES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,115,24,10
     CONTROL         " [",IDD_AUTOCBRACKET_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,101,133,24,10
