--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -289,15 +289,20 @@ IDD_PREFERENCE_BACKUP_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Backup",IDC_BACKUPDIR_GRP_STATIC,79,19,289,128,BS_CENTER
-    CONTROL         "None",IDC_RADIO_BKNONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,104,32,87,10
-    CONTROL         "Simple backup",IDC_RADIO_BKSIMPLE,"Button",BS_AUTORADIOBUTTON,104,46,111,10
-    CONTROL         "Verbose backup",IDC_RADIO_BKVERBOSE,"Button",BS_AUTORADIOBUTTON,104,60,111,10
-    GROUPBOX        "Custom Backup Directory",IDC_BACKUPDIR_USERCUSTOMDIR_GRPSTATIC,95,87,260,40
-    CONTROL         "",IDC_BACKUPDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,87,8,10
-    RTEXT           "Directory :",IDD_BACKUPDIR_STATIC,99,98,40,8
-    EDITTEXT        IDC_BACKUPDIR_EDIT,146,102,179,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,102,16,14
+    GROUPBOX        "Backup on save",IDC_BACKUPDIR_GRP_STATIC,79,69,289,110,BS_CENTER
+    CONTROL         "None",IDC_RADIO_BKNONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,104,80,87,10
+    CONTROL         "Simple backup",IDC_RADIO_BKSIMPLE,"Button",BS_AUTORADIOBUTTON,104,94,111,10
+    CONTROL         "Verbose backup",IDC_RADIO_BKVERBOSE,"Button",BS_AUTORADIOBUTTON,104,108,111,10
+    GROUPBOX        "Custom Backup Directory",IDC_BLINKRATE_STATIC,95,129,260,40
+    CONTROL         "",IDC_BACKUPDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,129,8,10
+    RTEXT           "Directory :",IDD_BACKUPDIR_STATIC,99,146,40,8
+    EDITTEXT        IDC_BACKUPDIR_EDIT,146,144,179,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,144,16,14
+    GROUPBOX        "Snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,59,BS_CENTER
+    CONTROL         "Enable",IDC_BACKUPDIR_RESTORESESSION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,105,17,101,10
+    EDITTEXT        IDC_BACKUPDIR_RESTORESESSION_EDIT,164,35,21,14,ES_NUMBER
+    RTEXT           "Backup in every",IDD_BACKUPDIR_RESTORESESSION_STATIC1,82,37,78,8
+    LTEXT           "seconds",IDD_BACKUPDIR_RESTORESESSION_STATIC2,190,37,66,8
 END
 
 IDD_PREFERENCE_AUTOCOMPLETION_BOX DIALOGEX 0, 0, 455, 185
