--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -298,7 +298,7 @@ BEGIN
     RTEXT           "Directory :",IDD_BACKUPDIR_STATIC,99,146,40,8
     EDITTEXT        IDC_BACKUPDIR_EDIT,146,144,179,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,144,16,14
-    GROUPBOX        "Snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,59,BS_CENTER
+    GROUPBOX        "Session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,59,BS_CENTER
     CONTROL         "Enable",IDC_BACKUPDIR_RESTORESESSION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,105,17,101,10
     EDITTEXT        IDC_BACKUPDIR_RESTORESESSION_EDIT,164,35,21,14,ES_NUMBER
     RTEXT           "Backup in every",IDD_BACKUPDIR_RESTORESESSION_STATIC1,82,37,78,8
