[NEW_FEATURE] Snapshot feature.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1224 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -130,7 +130,6 @@ BEGIN
     CONTROL         "Auto-indent",IDC_CHECK_MAINTAININDENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,130,150,10
     CONTROL         "Minimize to system tray",IDC_CHECK_MIN2SYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,145,150,10
     CONTROL         "Show only filename in title bar",IDC_CHECK_SHORTTITLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,160,217,10
-    CONTROL         "Remember current session for next launch",IDC_CHECK_REMEMBERSESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,175,217,10
     CONTROL         "Enable",IDC_CHECK_CLICKABLELINK_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,15,140,10
     CONTROL         "No underline",IDC_CHECK_CLICKABLELINK_NOUNDERLINE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,28,140,10
@@ -284,7 +283,7 @@ BEGIN
     LTEXT           "",IDC_VIEWPANEL_STATIC,242,161,190,8
     GROUPBOX        "Header and Footer",IDC_HEADERFPPTER_GR_STATIC,150,7,296,172,BS_CENTER
 END
-
+ 
 IDD_PREFERENCE_BACKUP_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
@@ -299,10 +298,11 @@ BEGIN
     EDITTEXT        IDC_BACKUPDIR_EDIT,146,144,179,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,144,16,14
     GROUPBOX        "Session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,59,BS_CENTER
-    CONTROL         "Enable",IDC_BACKUPDIR_RESTORESESSION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,105,17,101,10
-    EDITTEXT        IDC_BACKUPDIR_RESTORESESSION_EDIT,164,35,21,14,ES_NUMBER
-    RTEXT           "Backup in every",IDD_BACKUPDIR_RESTORESESSION_STATIC1,82,37,78,8
-    LTEXT           "seconds",IDD_BACKUPDIR_RESTORESESSION_STATIC2,190,37,66,8
+    CONTROL         "Remember current session for next launch",IDC_CHECK_REMEMBERSESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,10,270,10  
+    CONTROL         "Enable session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,25,270,10  
+    EDITTEXT        IDC_BACKUPDIR_RESTORESESSION_EDIT,164,40,21,14,ES_NUMBER
+    RTEXT           "Backup in every",IDD_BACKUPDIR_RESTORESESSION_STATIC1,82,42,78,8
+    LTEXT           "seconds",IDD_BACKUPDIR_RESTORESESSION_STATIC2,190,42,66,8
 END
 
 IDD_PREFERENCE_AUTOCOMPLETION_BOX DIALOGEX 0, 0, 455, 185
