[NEW_FEATURE] (Author: Andreas Jonsson) Make backslash as an escape character optional in SQL.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1230 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -130,6 +130,7 @@ BEGIN
     CONTROL         "Auto-indent",IDC_CHECK_MAINTAININDENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,130,150,10
     CONTROL         "Minimize to system tray",IDC_CHECK_MIN2SYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,145,150,10
     CONTROL         "Show only filename in title bar",IDC_CHECK_SHORTTITLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,160,217,10
+	CONTROL         "Backslash is escape character for SQL",IDC_CHECK_BACKSLASHISESCAPECHARACTERFORSQL, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,175,217,10
     CONTROL         "Enable",IDC_CHECK_CLICKABLELINK_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,15,140,10
     CONTROL         "No underline",IDC_CHECK_CLICKABLELINK_NOUNDERLINE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,28,140,10
