[NEW] Add shell script parser for the function list.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1231 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -157,7 +157,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     GROUPBOX        "New Document",IDC_NEWDOCUMENT_GR_STATIC,50,8,354,161,BS_CENTER
-    GROUPBOX        "Format",IDC_FORMAT_GB_STATIC,68,29,129,79,BS_CENTER
+    GROUPBOX        "Format (Line ending)",IDC_FORMAT_GB_STATIC,68,29,129,79,BS_CENTER
     CONTROL         "Windows",IDC_RADIO_F_WIN,"Button",BS_AUTORADIOBUTTON | WS_GROUP,75,48,50,10
     CONTROL         "Old Mac",IDC_RADIO_F_MAC,"Button",BS_AUTORADIOBUTTON,75,64,50,10
     CONTROL         "Unix/OSX",IDC_RADIO_F_UNIX,"Button",BS_AUTORADIOBUTTON,75,81,50,10
