[NEW_FEATURE] Settings on cloud - dropbox.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1242 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -370,3 +370,12 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,109,160,10
 END
 
+IDD_PREFERENCE_SETTINGSONCLOUD_BOX DIALOGEX 0, 0, 455, 185
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
+BEGIN
+    GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,89,BS_CENTER
+    CONTROL         "Dropbox",IDD_SETTINGSONCLOUD_DROPBOX_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,60,160,10
+END
+
