[NEW] Add warning text if settings on cloud option has been changed.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1243 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -377,5 +377,6 @@ BEGIN
     GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,89,BS_CENTER
     CONTROL         "Dropbox",IDD_SETTINGSONCLOUD_DROPBOX_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,60,160,10
+	LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,132,75,135,8
 END
 
