[NEW] Add backup folder information so user can get back the modified file while crashing.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1244 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -289,21 +289,25 @@ IDD_PREFERENCE_BACKUP_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,59,BS_CENTER
-    CONTROL         "Remember current session for next launch",IDC_CHECK_REMEMBERSESSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,10,270,10  
-    CONTROL         "Enable session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,25,270,10  
+    GROUPBOX        "Session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,75,BS_CENTER
+    CONTROL         "Remember current session for next launch",IDC_CHECK_REMEMBERSESSION,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,10,270,10
+    CONTROL         "Enable session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,25,270,10
     EDITTEXT        IDC_BACKUPDIR_RESTORESESSION_EDIT,164,40,21,14,ES_NUMBER
     RTEXT           "Backup in every",IDD_BACKUPDIR_RESTORESESSION_STATIC1,82,42,78,8
     LTEXT           "seconds",IDD_BACKUPDIR_RESTORESESSION_STATIC2,190,42,66,8
-    GROUPBOX        "Backup on save",IDC_BACKUPDIR_GRP_STATIC,79,69,289,110,BS_CENTER
-    CONTROL         "None",IDC_RADIO_BKNONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,104,80,87,10
-    CONTROL         "Simple backup",IDC_RADIO_BKSIMPLE,"Button",BS_AUTORADIOBUTTON,104,94,111,10
-    CONTROL         "Verbose backup",IDC_RADIO_BKVERBOSE,"Button",BS_AUTORADIOBUTTON,104,108,111,10
-    GROUPBOX        "Custom Backup Directory",IDC_BLINKRATE_STATIC,95,129,260,40
-    CONTROL         "",IDC_BACKUPDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,129,8,10
-    RTEXT           "Directory :",IDD_BACKUPDIR_STATIC,99,146,40,8
-    EDITTEXT        IDC_BACKUPDIR_EDIT,146,144,179,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,144,16,14
+    GROUPBOX        "Backup on save",IDC_BACKUPDIR_GRP_STATIC,79,81,289,101,BS_CENTER
+    CONTROL         "None",IDC_RADIO_BKNONE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,104,90,87,10
+    CONTROL         "Simple backup",IDC_RADIO_BKSIMPLE,"Button",BS_AUTORADIOBUTTON,104,104,111,10
+    CONTROL         "Verbose backup",IDC_RADIO_BKVERBOSE,"Button",BS_AUTORADIOBUTTON,104,117,111,10
+    GROUPBOX        "Custom Backup Directory",IDC_BLINKRATE_STATIC,95,135,260,40
+    CONTROL         "",IDC_BACKUPDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,132,8,10
+    RTEXT           "Directory :",IDD_BACKUPDIR_STATIC,99,152,40,8
+    EDITTEXT        IDC_BACKUPDIR_EDIT,146,150,179,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDD_BACKUPDIR_BROWSE_BUTTON,332,150,16,14
+    RTEXT           "Backup path:",IDD_BACKUPDIR_RESTORESESSION_PATHLABEL_STATIC,85,60,61,8
+    EDITTEXT        IDD_BACKUPDIR_RESTORESESSION_PATH_EDIT,153,58,208,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_PREFERENCE_AUTOCOMPLETION_BOX DIALOGEX 0, 0, 455, 185
