[NEW_FEATURE] Add "Setting on Cloud - OneDrive" GUI part.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1251 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -379,8 +379,9 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,89,BS_CENTER
-    CONTROL         "Dropbox",IDD_SETTINGSONCLOUD_DROPBOX_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,60,160,10
-	LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,132,75,135,8
+    CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,92,10
+    CONTROL         "Dropbox",IDC_DROPBOX_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,92,10
+    CONTROL         "OneDrive",IDC_ONEDRIVE_RADIO,"Button",BS_AUTORADIOBUTTON,125,87,92,10
+    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,106,135,8
 END
 
