--- a/PowerEditor/visual.net/notepadPlus.vcproj
+++ b/PowerEditor/visual.net/notepadPlus.vcproj
@@ -546,6 +546,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\sqlite\sqlite3.c"
+				>
+				<FileConfiguration
+					Name="Unicode Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+						WarningLevel="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="..\src\WinControls\StaticDialog\StaticDialog.cpp"
 				>
 			</File>
@@ -1553,11 +1566,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\resource.h"
+				RelativePath="..\src\WinControls\Preference\resource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\src\WinControls\Preference\resource.h"
+				RelativePath="..\src\resource.h"
 				>
 			</File>
 			<File
@@ -1606,6 +1619,10 @@
 			</File>
 			<File
 				RelativePath="..\src\WinControls\SplitterContainer\SplitterContainer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\sqlite\sqlite3.h"
 				>
 			</File>
 			<File
