[NEW_FEATURE] Settings on cloud - Google Drive.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1258 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -382,6 +382,7 @@ BEGIN
     CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,92,10
     CONTROL         "Dropbox",IDC_DROPBOX_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,92,10
     CONTROL         "OneDrive",IDC_ONEDRIVE_RADIO,"Button",BS_AUTORADIOBUTTON,125,87,92,10
-    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,106,135,8
+    CONTROL         "Google Drive",IDC_GOOGLEDRIVE_RADIO,"Button",BS_AUTORADIOBUTTON,125,102,92,10
+    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,135,8
 END
 
